OPT-7234: implemention of abstract layer for the writers (#8922)
* abstract layer for the writers

* adapt the es writers to abstract layaer

* apply changes to others services

* fix duplication

* update email configurations

* resolve comments

* fix comments

* adopt it to the optimize formatting schema

* adopt it to the optimize formatting schema #2

* resolving comments

---------

Co-authored-by: kovaIenko <“ruslan.kovalenko-ext@camunda.com”>